@@ -187,7 +187,7 @@ prop_binding_sync_pref_to_prop (PropBinding *binding,
                                 GConfValue  *pref_value)
 {
         GValue src_value, value;
-
+        
         /* Make sure we don't enter an infinite synchronizing loop */
         g_signal_handler_block (binding->object, binding->prop_notify_id);
 
@@ -324,8 +324,16 @@ prop_binding_sync_prop_to_pref (PropBinding *binding)
                 break;
         case G_TYPE_DOUBLE:
                 gconf_value = gconf_value_new (GCONF_VALUE_FLOAT);
+#ifdef HAVE_CORBA_GCONF
+                /* FIXME we cast to a float explicitly as CORBA GConf
+                 * uses doubles in its API, but treats them as floats
+                 * when transporting them over CORBA. See #322837 */
+                gconf_value_set_float (gconf_value,
+                                       (float) g_value_get_double (&value));
+#else
                 gconf_value_set_float (gconf_value,
                                        g_value_get_double (&value));
+#endif
                 break;
         case G_TYPE_FLOAT:
                 gconf_value = gconf_value_new (GCONF_VALUE_FLOAT);
@@ -353,12 +361,8 @@ prop_binding_sync_prop_to_pref (PropBinding *binding)
 
         /* Store until change notification comes in, so that we are able
          * to ignore it */
-        if (gconf_value->type == GCONF_VALUE_FLOAT) /* FIXME see #322837 */
-                gconf_value_free (gconf_value);
-        else {
-                binding->val_changes = g_slist_append (binding->val_changes,
-                                                       gconf_value);
-        }
+        binding->val_changes = g_slist_append (binding->val_changes,
+                                               gconf_value);
 
 done:
         g_value_unset (&value);
